Change a tag into button tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
             <ul class="gnb-util">
                 <li>
-                    <a href="#">
+                    <button type="button">
                         <span class="blind">검색창 열기</span>
                         <svg class="svg-icon">
                             <g transform="translate(1 1)">
@@ -30,10 +30,10 @@
                                 <path d="M14.987 14.987L21.017 21.017"></path>
                             </g>
                         </svg>
-                    </a>
+                    </button>
                 </li>
                 <li>
-                    <a href="#">
+                    <button type="button">
                         <span class="blind">영어로 보기</span>
                         <svg class="svg-icon">
                             <g transform="translate(1 1)">
@@ -42,17 +42,17 @@
                                 <path d="M.876 7.018L18.952 7.018M.876 12.811L18.952 12.811"></path>
                             </g>`
                         </svg>
-                    </a>
+                    </button>
                 </li>
                 <li>
-                    <a href="#">
+                    <button type="button">
                         <span class="blind">다크모드로 변경하기</span>
                         <svg class="svg-icon">
                             <g transform="translate(1 1)">
                                 <path d="M16.086 13.417c-5.013 0-9.076-4.04-9.076-9.023 0-1.596.42-3.093 1.152-4.394C3.58.456 0 4.3 0 8.977 0 13.961 4.064 18 9.076 18c3.407 0 6.372-1.868 7.924-4.628-.3.03-.605.045-.914.045z"></path>
                             </g>
                         </svg>
-                    </a>
+                    </button>
                 </li>
             </ul>
         </nav>```
