--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <a href="#">kakao</a>
             </h1>
             <ul class="gnb-menu">
-                <li><a href="#">카카오</a></li>
-                <li><a href="#">뉴스</a></li>
-                <li><a href="#">기술과 서비스</a></li>
-                <li><a href="#">약속과 책임</a></li>
+                <li><a class="gnb-menu-item" href="#">카카오</a></li>
+                <li><a class="gnb-menu-item" href="#">뉴스</a></li>
+                <li><a class="gnb-menu-item" href="#">기술과 서비스</a></li>
+                <li><a class="gnb-menu-item" href="#">약속과 책임</a></li>
             </ul>
             <ul class="gnb-util">
                 <li>
