--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <li>
                     <button type="button" class="button-icon">
                         <span class="blind">검색창 열기</span>
-                        <svg class="svg-icon" viewBox="0 0 28 28">
-                            <g transform="translate(2 2)">
+                        <svg viewBox="0 0 28 28" class="gnb-svg">
+                            <g transform="translate(4 4)">
                                 <circle cx="8.944" cy="8.944" r="8.944"></circle>
                                 <path d="M14.987 14.987L21.017 21.017"></path>
                             </g>
@@ -35,8 +35,8 @@
                 <li>
                     <button type="button" class="button-icon">
                         <span class="blind">영어로 보기</span>
-                        <svg class="svg-icon" viewBox="0 0 28 28">
-                            <g transform="translate(3 3)">
+                        <svg viewBox="0 0 28 28" class="gnb-svg">
+                            <g transform="translate(3 3) scale(1.2)">
                                 <path d="M19.353 9.914c0 5.213-4.226 9.438-9.438 9.438-5.213 0-9.438-4.225-9.438-9.438C.477 4.702 4.702.477 9.915.477c5.212 0 9.438 4.225 9.438 9.437z"></path>
                                 <path d="M13.662 9.914c0 5.213-3.748 9.438-3.748 9.438s-3.747-4.225-3.747-9.438c0-5.212 3.747-9.437 3.747-9.437s3.748 4.225 3.748 9.437z"></path>
                                 <path d="M.876 7.018L18.952 7.018M.876 12.811L18.952 12.811"></path>
@@ -47,8 +47,8 @@
                 <li>
                     <button type="button" class="button-icon">
                         <span class="blind">다크모드로 변경하기</span>
-                        <svg class="svg-icon" viewBox="0 0 28 28">
-                            <g transform="translate(5 5)">
+                        <svg viewBox="0 0 28 28" class="gnb-svg">
+                            <g transform="translate(6 4) scale(1.2)">
                                 <path d="M16.086 13.417c-5.013 0-9.076-4.04-9.076-9.023 0-1.596.42-3.093 1.152-4.394C3.58.456 0 4.3 0 8.977 0 13.961 4.064 18 9.076 18c3.407 0 6.372-1.868 7.924-4.628-.3.03-.605.045-.914.045z"></path>
                             </g>
                         </svg>
@@ -66,7 +66,40 @@
                     <span>11월 7일 토요일 소식입니다</span>
                 </h3>
             </header>
+            <article class="card-article">
+                <div class="card-wrap">
+                    <div class="card">
+                        <span class="card-cate">
+                            <img src="./images/info.png" alt="" class="cate-icon">
+                            <span class="cate-txt">보도자료</span>
+                        </span>
+                        <a href="#" class="card-link">
+                            <strong class="card-title">카카오엔터테인먼트, 서울시 주최 ‘2021 서울웹툰공모전’ 단독 후원사로 참여</strong>
+                            <span class="img-wrap">
+                                <img src="./images/card01.jpg" alt="" class="card-img">
+                            </span>
+                        </a>
+                        <span class="card-info">
+                            <span class="card-keyword">#카카오엔터테인먼트</span>
+                            <span class="card-keyword">#카카오페이지</span>
+                            <span class="card-keyword">#서울시</span>
+                        </span>
+                        <button type="button" class="card-button">
+                            <svg viewBox="0 0 28 28" class="card-svg">
+                                <g transform="translate(13 4)">
+                                    <circle cx="2" cy="2" r="2"></circle>
+                                    <circle cx="2" cy="10" r="2"></circle>
+                                    <circle cx="2" cy="18" r="2"></circle>
+                                </g>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="card-wrap">
+
+                </div>
+            </article>
         </section>
     </main>
 </body>
-</html>
+</html>`
