--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <header>
                 <h3 class="title-main">
                     <em class="title-emph">오늘의 카카오</em>
-                    <span>11월 7일 토요일 소식입니다</span>
+                    <span>11월 9일 화요일 소식입니다</span>
                 </h3>
             </header>
             <article class="card-article">
