--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
                     </div>
                 </div>
             </article>
+            <article class="culture-article">
+                <strong class="culture-title">기술과 사람으로 더 나은 세상을 만듭니다.</strong>
+                <a href="#" class="culture-link">
+                    카카오문화 바로가기
+                    <img src="images/arrow.svg" alt="" class="culture-arrow">
+                </a>
+                <img src="images/culture.png" alt="" class="culture-img">
+            </article>
         </section>
     </main>
 </body>
