--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="main-section">
             <h2 class="blind">홈 본문</h2>
             <header>
-                <h3 class="title-main">
+                <h3 class="main-title">
                     <em class="title-emph">오늘의 카카오</em>
                     <span>11월 9일 화요일 소식입니다</span>
                 </h3>
