Fix section, article tag for web standards

--- a/index.html
+++ b/index.html
@@ -60,29 +60,106 @@
     <main class="doc-main">
         <section class="main-section">
             <h2 class="blind">홈 본문</h2>
-            <header>
-                <h3 class="main-title">
-                    <em class="title-emph">오늘의 카카오</em>
-                    <span>11월 9일 화요일 소식입니다</span>
-                </h3>
-            </header>
-            <article class="card-article">
-                <div class="card-wrap">
-                    <div class="card sticky-card">
+            <h3 class="main-title">
+                <em class="title-emph">오늘의 카카오</em>
+                <span>11월 9일 화요일 소식입니다</span>
+            </h3>
+        </section>
+        <section class="card-section">
+            <h2 class="blind">카카오 소식</h2>
+            <div class="card-wrap">
+                <article class="card sticky-card">
+                    <span class="card-cate">
+                            <img src="./images/info.png" alt="" class="cate-icon">
+                            <span class="cate-txt">보도자료</span>
+                    </span>
+                    <a href="#" class="card-link">
+                            <strong class="card-title">카카오엔터테인먼트, 서울시 주최 ‘2021 서울웹툰공모전’ 단독 후원사로 참여</strong>
+                            <span class="img-wrap">
+                                <img src="./images/card01.jpg" alt="" class="card-img">
+                            </span>
+                    </a>
+                    <span class="card-info">
+                            <span class="card-keyword">#카카오엔터테인먼트</span>
+                            <span class="card-keyword">#카카오페이지</span>
+                            <span class="card-keyword">#서울시</span>
+                    </span>
+                    <button type="button" class="card-button">
+                        <svg viewBox="0 0 28 28" class="card-svg">
+                                <g transform="translate(13 4)">
+                                    <circle cx="2" cy="2" r="2"></circle>
+                                    <circle cx="2" cy="10" r="2"></circle>
+                                    <circle cx="2" cy="18" r="2"></circle>
+                                </g>
+                        </svg>
+                    </button>
+                </article>
+            </div>
+            <div class="card-wrap">
+                <div class="card-grid">
+                    <article class="card long-card1">
                         <span class="card-cate">
                             <img src="./images/info.png" alt="" class="cate-icon">
                             <span class="cate-txt">보도자료</span>
                         </span>
                         <a href="#" class="card-link">
-                            <strong class="card-title">카카오엔터테인먼트, 서울시 주최 ‘2021 서울웹툰공모전’ 단독 후원사로 참여</strong>
+                            <strong class="mini-title multi-ellipsis">
+                            카카오재팬, 카카오픽코마로 사명 변경하고 프랑스 진출
+                            <br>
+                            글로벌 대표 만화 콘텐츠 플랫폼 기업으로 도약
+                            </strong>
                             <span class="img-wrap">
-                                <img src="./images/card01.jpg" alt="" class="card-img">
+                                <img src="./images/card02.png" alt="" class="card-img">
                             </span>
                         </a>
-                        <span class="card-info">
-                            <span class="card-keyword">#카카오엔터테인먼트</span>
-                            <span class="card-keyword">#카카오페이지</span>
-                            <span class="card-keyword">#서울시</span>
+                        <span class="card-info mini-info">
+                            <span class="card-keyword">#글로벌진출</span>
+                            <span class="card-keyword">#카카오재팬</span>
+                            <span class="card-keyword">#카카오픽코마</span>
+                            <span class="card-keyword">#프랑스</span>
+                            <span class="card-keyword">#픽코마</span>
+                        </span>
+                        <button type="button" class="card-button">
+                            <svg viewBox="0 0 28 28" class="card-svg">
+                                    <g transform="translate(13 4)">
+                                        <circle cx="2" cy="2" r="2"></circle>
+                                        <circle cx="2" cy="10" r="2"></circle>
+                                        <circle cx="2" cy="18" r="2"></circle>
+                                    </g>
+                            </svg>
+                        </button>
+                    </article>
+                    <article class="card">
+                        <a href="#" class="mini-wrap">
+                            <span class="card-cate">
+                                <img src="./images/stock.png" alt="" class="cate-icon">
+                                <span class="cate-txt">주가정보</span>
+                            </span>
+                            <span class="blind">카카오 주가정보</span>
+                            <strong class="stock-info">
+                                <span class="stock-price">125,000</span>
+                                <span class="price-change decline">
+                                    <span class="blind">전일대비 하락</span>
+                                    3500
+                                </span>
+                            </strong>
+                            <span class="stock-date">2021.11.08 22:57PM</span>
+                        </a>
+                    </article>
+                    <article class="card long-card2">
+                        <span class="card-cate">
+                            <img src="./images/info.png" alt="" class="cate-icon">
+                            <span class="cate-txt">보도자료</span>
+                        </span>
+                        <a href="#" class="card-link">
+                            <strong class="mini-title multi-ellipsis">카카오, 2021년 3분기 연결 매출 1조7,408억 원, 영업이익 1,682억 원</strong>
+                            <span class="img-wrap">
+                                <img src="./images/card03.png" alt="" class="card-img">
+                            </span>
+                        </a>
+                        <span class="card-info mini-info">
+                            <span class="card-keyword">##2021년3분기</span>
+                            <span class="card-keyword">##실적발표</span>
                         </span>
                         <button type="button" class="card-button">
                             <svg viewBox="0 0 28 28" class="card-svg">
@@ -93,135 +170,58 @@
                                 </g>
                             </svg>
                         </button>
-                    </div>
+                    </article>
+                    <article class="card">
+                        <span class="card-cate">
+                            <img src="./images/heart.png" alt="" class="cate-icon">
+                            <span class="cate-txt">약속과 책임</span>
+                        </span>
+                        <a href="#" class="card-link">
+                            <strong class="mini-title multi-ellipsis">카카오는 당신과 함께 더 나은 세상을 만듭니다.</strong>
+                        </a>
+                        <span class="card-info mini-info pull-line">
+                            <span class="card-keyword">#약속과책임</span>
+                            <span class="card-keyword">#esg</span>
+                            <span class="card-keyword">#소셜임팩트</span>
+                        </span>
+                    </article>
+                    <article class="card long-card3">
+                        <span class="card-cate">
+                            <img src="./images/stock.png" alt="" class="cate-icon">
+                            <span class="cate-txt">투자정보</span>
+                        </span>
+                        <a href="#" class="card-link">
+                            <strong class="mini-title multi-ellipsis">2021년 3분기 실적발표</strong>
+                            <span class="img-wrap">
+                                <img src="./images/card03.png" alt="" class="card-img">
+                            </span>
+                        </a>
+                        <span class="card-info mini-info">
+                            <span class="card-keyword">#카카오 실적</span>
+                            <span class="card-keyword">#카카오 3분기 실적</span>
+                            <span class="card-keyword">#카카오 IR</span>
+                        </span>
+                        <button type="button" class="card-button">
+                            <svg viewBox="0 0 28 28" class="card-svg">
+                                <g transform="translate(13 4)">
+                                    <circle cx="2" cy="2" r="2"></circle>
+                                    <circle cx="2" cy="10" r="2"></circle>
+                                    <circle cx="2" cy="18" r="2"></circle>
+                                </g>
+                            </svg>
+                        </button>
+                    </article>
                 </div>
-                <div class="card-wrap">
-                    <div class="card-grid">
-                        <div class="card long-card1">
-                            <span class="card-cate">
-                                <img src="./images/info.png" alt="" class="cate-icon">
-                                <span class="cate-txt">보도자료</span>
-                            </span>
-                            <a href="#" class="card-link">
-                                <strong class="mini-title multi-ellipsis">
-                                카카오재팬, 카카오픽코마로 사명 변경하고 프랑스 진출
-                                <br>
-                                글로벌 대표 만화 콘텐츠 플랫폼 기업으로 도약
-                                </strong>
-                                <span class="img-wrap">
-                                    <img src="./images/card02.png" alt="" class="card-img">
-                                </span>
-                            </a>
-                            <span class="card-info mini-info">
-                                <span class="card-keyword">#글로벌진출</span>
-                                <span class="card-keyword">#카카오재팬</span>
-                                <span class="card-keyword">#카카오픽코마</span>
-                                <span class="card-keyword">#프랑스</span>
-                                <span class="card-keyword">#픽코마</span>
-                            </span>
-                            <button type="button" class="card-button">
-                                <svg viewBox="0 0 28 28" class="card-svg">
-                                    <g transform="translate(13 4)">
-                                        <circle cx="2" cy="2" r="2"></circle>
-                                        <circle cx="2" cy="10" r="2"></circle>
-                                        <circle cx="2" cy="18" r="2"></circle>
-                                    </g>
-                                </svg>
-                            </button>
-                        </div>
-                        <div class="card">
-                            <a href="#" class="mini-wrap">
-                                <span class="card-cate">
-                                    <img src="./images/stock.png" alt="" class="cate-icon">
-                                    <span class="cate-txt">주가정보</span>
-                                </span>
-                                <span class="blind">카카오 주가정보</span>
-                                <strong class="stock-info">
-                                    <span class="stock-price">125,000</span>
-                                    <span class="price-change decline">
-                                        <span class="blind">전일대비 하락</span>
-                                        3500
-                                    </span>
-                                </strong>
-                                <span class="stock-date">2021.11.08 22:57PM</span>
-                            </a>
-                        </div>
-                        <div class="card long-card2">
-                            <span class="card-cate">
-                                <img src="./images/info.png" alt="" class="cate-icon">
-                                <span class="cate-txt">보도자료</span>
-                            </span>
-                            <a href="#" class="card-link">
-                                <strong class="mini-title multi-ellipsis">카카오, 2021년 3분기 연결 매출 1조7,408억 원, 영업이익 1,682억 원</strong>
-                                <span class="img-wrap">
-                                    <img src="./images/card03.png" alt="" class="card-img">
-                                </span>
-                            </a>
-                            <span class="card-info mini-info">
-                                <span class="card-keyword">##2021년3분기</span>
-                                <span class="card-keyword">##실적발표</span>
-                            </span>
-                            <button type="button" class="card-button">
-                                <svg viewBox="0 0 28 28" class="card-svg">
-                                    <g transform="translate(13 4)">
-                                        <circle cx="2" cy="2" r="2"></circle>
-                                        <circle cx="2" cy="10" r="2"></circle>
-                                        <circle cx="2" cy="18" r="2"></circle>
-                                    </g>
-                                </svg>
-                            </button>
-                        </div>
-                        <div class="card">
-                            <span class="card-cate">
-                                <img src="./images/heart.png" alt="" class="cate-icon">
-                                <span class="cate-txt">약속과 책임</span>
-                            </span>
-                            <a href="#" class="card-link">
-                                <strong class="mini-title multi-ellipsis">카카오는 당신과 함께 더 나은 세상을 만듭니다.</strong>
-                            </a>
-                            <span class="card-info mini-info pull-line">
-                                <span class="card-keyword">#약속과책임</span>
-                                <span class="card-keyword">#esg</span>
-                                <span class="card-keyword">#소셜임팩트</span>
-                            </span>
-                        </div>
-                        <div class="card long-card3">
-                            <span class="card-cate">
-                                <img src="./images/stock.png" alt="" class="cate-icon">
-                                <span class="cate-txt">투자정보</span>
-                            </span>
-                            <a href="#" class="card-link">
-                                <strong class="mini-title multi-ellipsis">2021년 3분기 실적발표</strong>
-                                <span class="img-wrap">
-                                    <img src="./images/card03.png" alt="" class="card-img">
-                                </span>
-                            </a>
-                            <span class="card-info mini-info">
-                                <span class="card-keyword">#카카오 실적</span>
-                                <span class="card-keyword">#카카오 3분기 실적</span>
-                                <span class="card-keyword">#카카오 IR</span>
-                            </span>
-                            <button type="button" class="card-button">
-                                <svg viewBox="0 0 28 28" class="card-svg">
-                                    <g transform="translate(13 4)">
-                                        <circle cx="2" cy="2" r="2"></circle>
-                                        <circle cx="2" cy="10" r="2"></circle>
-                                        <circle cx="2" cy="18" r="2"></circle>
-                                    </g>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article class="culture-article">
+            </div>
+        </section>
+        <section class="culture-section">
+                <h2 class="blind">카카오문화</h2>
                 <strong class="culture-title">기술과 사람으로 더 나은 세상을 만듭니다.</strong>
                 <a href="#" class="culture-link">
                     카카오문화 바로가기
                     <img src="images/arrow.svg" alt="" class="culture-arrow">
                 </a>
                 <img src="images/culture.png" alt="" class="culture-img">
-            </article>
         </section>
     </main>
 </body>
