Add dot for recent card

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
             <div class="card-wrap">
                 <article class="card sticky-card">
                     <span class="card-cate">
+                            <span class="blind">새로운 소식</span>
                             <img src="./images/info.png" alt="" class="cate-icon">
-                            <span class="cate-txt">보도자료</span>
+                            <span class="cate-txt new">보도자료</span>
                     </span>
                     <a href="#" class="card-link">
                             <strong class="card-title">카카오엔터테인먼트, 서울시 주최 ‘2021 서울웹툰공모전’ 단독 후원사로 참여</strong>
