--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>카카오</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="doc-header">
@@ -58,14 +58,14 @@
         </nav>
     </header>
     <main class="doc-main">
-        <section class="main-section">
+        <section class="main-header">
             <h2 class="blind">홈 본문</h2>
-            <h3 class="main-title">
+            <p class="main-title">
                 <em class="title-emph">오늘의 카카오</em>
                 <span>11월 9일 화요일 소식입니다</span>
-            </h3>
+            </p>
         </section>
-        <section class="card-section">
+        <section class="card-news-top">
             <h2 class="blind">카카오 소식</h2>
             <div class="card-wrap">
                 <article class="card sticky-card">
