Fix media query

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section class="card-news-top">
       <h2 class="blind">마카오 소식 상단</h2>
-      <div class="card-wrap">
+      <div class="card-wrap single-wrap">
         <article class="card sticky-card">
           <span class="card-cate">
               <span class="blind">새로운 소식</span>
@@ -96,8 +96,8 @@
           </button>
         </article>
       </div>
-      <div class="card-wrap">
-        <div class="card-grid-top">
+      <div class="card-wrap multi-wrap">
+        <div class="card-grid">
           <article class="card grid-span1">
             <span class="card-cate">
               <img src="./images/info.png" alt="" class="cate-icon">
@@ -171,20 +171,6 @@
               </svg>
             </button>
           </article>
-          <article class="card">
-            <span class="card-cate">
-              <img src="./images/heart.png" alt="" class="cate-icon">
-              <span class="cate-txt">약속과 책임</span>
-            </span>
-            <a href="#" class="card-link">
-              <strong class="mini-title multi-ellipsis">마카오는 당신과 함께 더 나은 세상을 만듭니다.</strong>
-            </a>
-            <span class="card-info mini-info pull-line">
-              <span class="card-keyword">#약속과책임</span>
-              <span class="card-keyword">#esg</span>
-              <span class="card-keyword">#소셜임팩트</span>
-            </span>
-          </article>
           <article class="card grid-span3">
             <span class="card-cate">
               <img src="./images/stock.png" alt="" class="cate-icon">
@@ -211,21 +197,39 @@
               </svg>
             </button>
           </article>
+          <article class="card">
+            <span class="card-cate">
+              <img src="./images/heart.png" alt="" class="cate-icon">
+              <span class="cate-txt">약속과 책임</span>
+            </span>
+            <a href="#" class="card-link">
+              <strong class="mini-title multi-ellipsis">마카오는 당신과 함께 더 나은 세상을 만듭니다.</strong>
+            </a>
+            <span class="card-info mini-info pull-line">
+              <span class="card-keyword">#약속과책임</span>
+              <span class="card-keyword">#esg</span>
+              <span class="card-keyword">#소셜임팩트</span>
+            </span>
+          </article>
         </div>
       </div>
     </section>
     <section class="culture-section">
         <h2 class="blind">마카오문화</h2>
-        <strong class="culture-title">기술과 사람으로 더 나은 세상을 만듭니다.</strong>
+        <strong class="culture-title">
+          기술과 사람으로
+          <br>
+          더 나은 세상을 만듭니다.</strong>
         <a href="#" class="culture-link">
           마카오문화 바로가기
           <img src="images/arrow.svg" alt="" class="culture-arrow">
         </a>
-        <img src="images/culture.png" alt="" class="culture-img">
+        <img src="images/culture01.png" alt="" class="culture-img long-img">
+        <img src="images/culture02.png" alt="" class="culture-img short-img">
     </section>
     <section class="card-news-bottom">
       <h2 class="blind">마카오 소식 하단</h2>
-      <div class="card-wrap reverse">
+      <div class="card-wrap single-wrap reverse">
         <article class="card sticky-card">
           <span class="card-cate">
               <img src="./images/info.png" alt="" class="cate-icon">
@@ -253,8 +257,8 @@
           </button>
         </article>
       </div>
-      <div class="card-wrap">
-        <div class="card-grid-bottom">
+      <div class="card-wrap multi-wrap">
+        <div class="card-grid">
           <article class="card">
             <span class="card-cate">
               <img src="./images/customer.png" alt="" class="cate-icon">
@@ -263,8 +267,8 @@
             <strong class="card-message">어떤 서비스를 도와드릴까요?</strong>
             <ul class="cs-list">
               <li class="cs-link"><a href="#">마카오</a></li>
-              <li class="cs-link"><a href="#">다음</a></li>
-              <li class="cs-link"><a href="#">멜론</a></li>
+              <li class="cs-link"><a href="#">다움</a></li>
+              <li class="cs-link"><a href="#">참외</a></li>
             </ul>
           </article>
           <article class="card grid-span4">
