Remove duplicated codes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
       <div class="card-wrap multi-wrap">
         <div class="card-grid">
-          <article class="card grid-span1">
+          <article class="card grid-span">
             <span class="card-cate">
               <img src="./images/info.png" alt="" class="cate-icon">
               <span class="cate-txt">보도자료</span>
@@ -146,7 +146,7 @@
               <span class="stock-date">2021.11.08 22:57PM</span>
             </a>
           </article>
-          <article class="card grid-span2">
+          <article class="card grid-span">
             <span class="card-cate">
               <img src="./images/info.png" alt="" class="cate-icon">
               <span class="cate-txt">보도자료</span>
@@ -171,7 +171,7 @@
               </svg>
             </button>
           </article>
-          <article class="card grid-span3">
+          <article class="card grid-span">
             <span class="card-cate">
               <img src="./images/stock.png" alt="" class="cate-icon">
               <span class="cate-txt">투자정보</span>
@@ -271,7 +271,7 @@
               <li class="cs-link"><a href="#">참외</a></li>
             </ul>
           </article>
-          <article class="card grid-span4">
+          <article class="card grid-span">
             <a href="#" class="mini-wrap">
               <span class="card-cate">
                 <img src="./images/stock.png" alt="" class="cate-icon">
@@ -288,7 +288,7 @@
               <span class="stock-date">2021.11.08 22:57PM</span>
             </a>
           </article>
-          <article class="card grid-span5">
+          <article class="card grid-span">
             <span class="card-cate">
               <img src="./images/info.png" alt="" class="cate-icon">
               <span class="cate-txt">보도자료</span>
@@ -313,7 +313,7 @@
               </svg>
             </button>
           </article>
-          <article class="card grid-span6">
+          <article class="card grid-span">
             <span class="card-cate">
               <img src="./images/heart.png" alt="" class="cate-icon">
               <span class="cate-txt">약속과 책임</span>
@@ -327,7 +327,7 @@
               <span class="card-keyword">#소셜임팩트</span>
             </span>
           </article>
-          <article class="card grid-span7">
+          <article class="card grid-span">
             <span class="card-cate">
               <img src="./images/stock.png" alt="" class="cate-icon">
               <span class="cate-txt">투자정보</span>
